--- a/style.css
+++ b/style.css
@@ -140,7 +140,6 @@ main {
     align-items: center;
     margin-top: 20px;
     gap: 15px;
-    /* Espaço entre o botão e o texto */
 }
 
 .button-draw {
@@ -170,7 +169,6 @@ main {
 .result-text {
     font-size: 18px;
     color: #4CAF50;
-    /* Um verde vibrante */
     text-align: center;
     margin-top: 10px;
     font-weight: bold;
@@ -182,10 +180,8 @@ main {
     visibility: hidden;
 }
 
-/* Botão Remover */
-.btn-remover {
+.button-remove {
     background: #ff4c4c;
-    /* Cor vermelha */
     color: white;
     padding: 5px 10px;
     border: none;
@@ -196,7 +192,7 @@ main {
     font-size: 0.9rem;
 }
 
-.btn-remover:hover {
+.button-remove:hover {
     transform: scale(1.1);
     background-color: #f56ca8;
 }
@@ -208,6 +204,6 @@ main {
     align-items: center;
 }
 
-.name-list li .btn-remover {
+.name-list li .button-remove {
     margin-left: 10px;
 }
